# EncantoOcultoBlog

./: db.sqlite3  pyproject.toml
blog/: models.py  urls.py
blog/migrations/: 0001_initial.py
blog/templates/: base.html
django_project/: settings.py
